[package]
name = "ia_conversacional"
version = "0.1.0"
edition = "2024"

[dependencies]
# Cliente HTTP asíncrono
reqwest = { version = "0.12", features = ["json"] }
# Entorno de ejecución asíncrono
tokio = { version = "1", features = ["full"] }
# Serialización y deserialización de JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Para cargar variables de entorno desde un archivo .env
dotenvy = "0.15"
# ... (mantén reqwest, tokio, serde, serde_json, dotenvy) ...
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] } # Para servir archivos HTML/CSS
